[gd_scene load_steps=13 format=3 uid="uid://bsgb4mvsjpnoe"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_4cwoh"]
[ext_resource type="Theme" uid="uid://dx4s2by52h7iv" path="res://Resources/_MainMenu.tres" id="2_532y5"]
[ext_resource type="FontFile" uid="uid://dx8xmmu1q1k1" path="res://Assets/determination_mono.ttf" id="3_r7yoh"]
[ext_resource type="Texture2D" uid="uid://br6md1wtjp72h" path="res://Assets/black-hole-5k-3k.jpg" id="5_lc1nn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e74pb"]
bg_color = Color(0, 0, 0, 0.686275)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gvf7g"]
bg_color = Color(0.00784314, 0.0352941, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y528t"]
bg_color = Color(0.0784314, 0.109804, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kc7ap"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0623"]
bg_color = Color(0.964706, 0.368627, 0.0392157, 1)

[sub_resource type="Animation" id="Animation_jvhqr"]
resource_name = "fade_in"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.05, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_akfbk"]
resource_name = "fade_out"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hwltm"]
_data = {
"fade_in": SubResource("Animation_jvhqr"),
"fade_out": SubResource("Animation_akfbk")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cwoh")

[node name="Black-hole-5k-3k2" type="Sprite2D" parent="."]
position = Vector2(321.778, 322)
scale = Vector2(4.52778, 4.52778)
texture = ExtResource("5_lc1nn")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2(6, 54)
enabled = false
zoom = Vector2(0.75, 0.75)
process_callback = 0
position_smoothing_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -52.0
offset_right = 87.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_532y5")
text = "PLAY"

[node name="PlayerName" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_r7yoh")
placeholder_text = "CHOOSE YOUR NAME"
alignment = 1
max_length = 5

[node name="Records" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_532y5")
text = "RECORDS"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_532y5")
text = "EXIT"

[node name="ShadowDrop" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e74pb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 81.0
offset_right = 576.0
offset_bottom = 121.0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("2_532y5")
text = "NAME"

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_532y5")
text = "HIGHEST RECORD"

[node name="Label3" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_532y5")
text = "TIME"

[node name="leaders" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 120.0
offset_right = 576.0
offset_bottom = 536.0

[node name="Record_back" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 192.0
offset_top = 527.0
offset_right = 448.0
offset_bottom = 575.0
theme = ExtResource("2_532y5")
text = "CANCEL"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -52.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gvf7g")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y528t")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 216.0
offset_top = 8.0
offset_right = 440.0
offset_bottom = 42.0
theme = ExtResource("2_532y5")
text = "ARE YOU SURE?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 2
anchor_left = 0.346
anchor_top = 0.538
anchor_right = 0.654
anchor_bottom = 0.846
offset_left = -0.208008
offset_top = 0.0479965
offset_right = 0.207977
offset_bottom = 0.0159988
metadata/_edit_use_anchors_ = true

[node name="TrueQuit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_r7yoh")
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_kc7ap")
text = "CANCEL"

[node name="Back" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_r7yoh")
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_a0623")
text = "YES
"

[node name="transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hwltm")
}

[node name="ColorRect" type="ColorRect" parent="transition"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/PlayerName" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Records" to="." method="_on_records_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_ask_pressed"]
[connection signal="pressed" from="Record_back" to="." method="_on_records_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/TrueQuit" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Back" to="." method="_on_exit_pressed"]
